--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -1,9 +1,14 @@
+*{
+    margin: 0;
+}
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    @media (max-width: 600px) {
-        margin-left: 0;
-
+    box-sizing: border-box;
+    @media (max-width: 768px) {
+        height: 80%;
+        display: block;
     }
 }
 
@@ -208,14 +213,21 @@ body {
 
     footer{
         width: 100%;
-        @media(max-width) {
-            width: 100%;
+        @media(max-width: 600px) {
+            margin: 0;
+            align-items: end;
+            width: 100%;;
+
         }
     }
 
     .footer{
         width: 100%;
         height: 50px;
+        @media(max-width: 600px) {
+            margin: 0;
+            align-items: end;
+        }
     }
 
     .apps_footer{
