--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -1,15 +1,7 @@
 *{
     margin: 0;
-}
-
-body {
-    margin: 0;
     font-family: Arial, sans-serif;
     box-sizing: border-box;
-    @media (max-width: 768px) {
-        height: 80%;
-        display: block;
-    }
 }
 
 .header {
@@ -51,18 +43,23 @@ body {
 
 .search_div input::placeholder {
     color: white;
+    @media (max-width: 600px) {
+        
+    }
 }
 
 .profile_div {
     width: 90px;
     height: 90px;
-    background-color: #f8b95f;
     border-radius: 50%;
+    @media (max-width:600px) {
+        margin-left: -3px;
+    }
 }
 
 .foto_perfil {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
     border-radius: 50%;
 }
 
